--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- 禁止自动识别电话号码 -->
     <meta name="format-detection" content="telephone=no" />
-    <title>移动端应用</title>
+    <title>SAM移动+</title>
   </head>
   <body>
     <div id="app"></div>
